# odion-data-platform

./: .gitignore  CLAUDE.md  README.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml  run_pipeline.ps1
.claude/: settings.json
.dlt/: config.toml  secrets.toml.example
analyses/: afgeschermde_documenten.sql  afgeschermde_episodes.sql  afgeschermde_rapportages.sql  agenda_afspraken.sql  apothekers.sql  bewindvoerders.sql  cbs_jeugdtrajecten.sql  clienten_gezinnen_kind_en_gezin.sql  documenten_id_bewijs.sql  documenten_in_periode.sql  documenten_inkomensverklaringen.sql  doorstroom_jeugdwet.sql  episodes_in_periode.sql  instroom_uitstroom_doorstroom_kind_en_gezin.sql  jeugdtrajecten_verwijzers.sql  medische_documenten_zichtbaarheid.sql  rapportages_in_periode.sql  tarieven_export.sql  wachtlijst_wonen_met_producten.sql  wachtlijst_wonen_met_producten_en_indicatie.sql  zorgregels_uursoorten_deskundigheden.sql
docs/: data_architectuur.drawio  data_flow.drawio  data_integratie.drawio  dbt_linked_server.md  linked_server_ortec.md
ingestion/pipelines/: ons_audits.py  ortec.py
macros/: leeftijdsgroep.sql  locatiecluster.sql  locaties.sql  location_cluster.sql  macros.yml  ons_urls.sql
models/: sources.yml
models/gold/: dim_clienten.sql  dim_clienten_actueel.sql  dim_locaties.sql  fact_clienten_locaties_actueel.sql  fact_clienten_locaties_per_dag.sql  fact_clienten_locaties_per_jaar.sql  fact_clienten_locaties_per_maand.sql  fact_clienten_overleden.sql  (+4 more)
scripts/: init_database.sql
scripts/gold/: ddl_gold.sql
ssms/: generate_drop_statements.sql
(+178 files in other folders)
