[tool.poetry]
name = "odion-data-platform"
version = "0.1.0"
description = ""
authors = ["Chantal van Son <c.vanson@odion.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.10.13"
dbt-sqlserver = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
