[tool.poetry]
name = "odion-data-platform-cc"
version = "0.1.0"
description = "dbt project voor OnsDB data (Odion)"
authors = ["Odion"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dbt-sqlserver = "^1.9.0"

[tool.poetry.group.ingestion.dependencies]
dlt = {extras = ["mssql"], version = "^1.21.0"}
pandas = "^2.0"
sqlalchemy = "^2.0"
openpyxl = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
